<?xml version="1.0"?>
<package>
  <name>inverse_perspective_mapping</name>
  <version>0.0.1</version>
  <description>The inverse_perspective_mapping package</description>

  <maintainer email="timo.korthals@claas.com">Timo Korthals</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
